updated site menu and node validation

--- a/app/system/modules/site/app/settings.html
+++ b/app/system/modules/site/app/settings.html
@@ -1,7 +1,7 @@
 <div class="uk-form-row">
     <label for="form-title" class="uk-form-label">{{ 'Title' | trans }}</label>
     <div class="uk-form-controls">
-        <input id="form-title" class="uk-form-width-large" type="text" name="node[title]" v-model="node.title" v-valid="alphaNum">
+        <input id="form-title" class="uk-form-width-large" type="text" name="node[title]" v-model="node.title" v-valid="required">
         <span class="uk-form-help-block uk-text-danger" v-show="form['node[title]'].invalid">{{ 'Invalid name.' | trans }}</span>
     </div>
 </div>
@@ -10,8 +10,7 @@
     <label for="form-slug" class="uk-form-label">{{ 'Slug' | trans }}</label>
     <div class="uk-form-controls">
         <span>{{ $parent.path }}</span><br>
-        <input id="form-slug" class="uk-form-width-large" type="text" name="node[slug]" v-model="node.slug" v-valid="alphaNum">
-        <span class="uk-form-help-block uk-text-danger" v-show="form['node[slug]'].invalid">{{ 'Invalid slug.' | trans }}</span>
+        <input id="form-slug" class="uk-form-width-large" type="text" name="node[slug]" v-model="node.slug">
     </div>
 </div>
 
